fixed index search and spacing in index grid

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,7 +4,8 @@
 
 .index-background {
   background-color: #E9A974;
-  height: 100%;
+	height: 100%;
+	overflow: auto;
   h1 {
     color: #F1DDB3;
     text-align: center;
@@ -14,3 +15,10 @@
   }
 }
 
+.index-form {
+	width: 480px;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
